# subtype-refinement

./: .gitignore  .travis.yml  README.md  _oasis  dune-project  opam  subtype_refinement.opam
lib/: dune
lib_test/: constraint.ml
test/: dune
